<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--VideoView
        android:id="@+id/videoView"
        android:layout_width="412dp"
        android:layout_height="178dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" /-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lessons_and_tutorials"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111">

    </TextView>

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346">


        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:background="#FFC107"
            android:scaleType="fitCenter"
            android:src="@drawable/comp1"
            app:tint="@color/black">

        </ImageButton>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/coc_1"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346">

        <ImageButton
            android:id="@+id/btn2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:background="#FFC107"
            android:scaleType="fitCenter"
            android:src="@drawable/comp1"
            app:tint="@color/black">

        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/coc_2"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698">

        <ImageButton
            android:id="@+id/btn3"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:background="#FFC107"
            android:scaleType="fitCenter"
            android:src="@drawable/comp1"
            app:tint="@color/black">

        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/coc_3"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame4"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698">

        <ImageButton
            android:id="@+id/btn4"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:background="#FFC107"
            android:scaleType="fitCenter"
            android:src="@drawable/comp1"
            app:tint="@color/black">

        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/coc_4"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>
    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>